finalizada l cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="comienzo">
-            cabecera
+            hyperblog
         </div>
         <div id="post">
             <h1>este el titulo atractivo he interesante del post</h1>
