modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <div id="container">
         <div id="comienzo">
             hyperblog
+            <span id="tangline">tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>este el titulo atractivo he interesante del post</h1>
