--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <div id="container">
         <div id="comienzo">
             hyperblog
+            <span id="tragline">es tu blog maestro</span>
         </div>
         <div id="post">
             <h1>este el titulo atractivo he interesante del post</h1>
@@ -17,7 +18,7 @@
                 interenstes que se pueden hacer con las ramas
             </p>
             <p> los blog son la mejor forma de compartir informacion y tus ideas Mucho mas que ir a conferencias o salir en youtube. excepto si eres un rosckstar. pero estadisticamente no lo eres por ahora.
-
+           <p>suscribite y dale like</p>
 
             </p>
         </div>
